Fix header spacing

--- a/css/_post.scss
+++ b/css/_post.scss
@@ -187,10 +187,11 @@
 
 .post-intro {
   font-weight: 500;
-  margin-top: -2.5rem;
+  line-height: 1.2;
+  margin-top: .25em;
   font-size: var(--ms-2);
   hyphens: none;
-  margin-bottom: 2rem;
+  margin-bottom: 1em;
 }
 
 .post-title {
